# arcadia-tio-rs

./: AGENTS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ocb-core-reader.yml
crates/arcadia-tio-ocb-core/: Cargo.toml  README.md
crates/arcadia-tio-ocb-core/examples/: compact_l2_physical_v2_certify.rs  compact_l2_size_attribution.rs
crates/arcadia-tio-ocb-core/src/: certification.rs  column_bundle.rs  compact_l2.rs  error.rs  lib.rs  manifest.rs  parallel_prepare.rs  parallel_read.rs
crates/arcadia-tio-ocb-core/tests/: parallel_prepare_public_contract.rs
crates/arcadia-tio-rs/: Cargo.toml  README.md
crates/arcadia-tio-rs/examples/: l2_ocb_load.rs  l2_parquet_to_ocb.rs  ocb_fixed_binary.rs
crates/arcadia-tio-rs/examples/tutorials/: 01_quickstart_create_append_read.rs  02_layouts_reads_history.rs  03_coordinates_v1_numeric.rs  04_coordinates_v2_full_surface.rs  05_sparse_append.rs  06_mutation_history_universe.rs  07_reform_compaction_diagnostics.rs  08_compression_interop.rs  09_tensor_ops_conversions.rs  10_ocb_roundtrip_parallel.rs
crates/arcadia-tio-rs/src/: lib.rs
crates/arcadia-tio-rs/tests/: ocb.rs  roundtrip.rs
crates/arcadia-tio-sys/: Cargo.toml  README.md  build.rs
crates/arcadia-tio-sys/src/: lib.rs
crates/arcadia-tio-sys/tests/: constants.rs  smoke.rs
docs/agent/: README.md
examples/tutorials/run/: run_rust.sh
