[workspace]
members = [
    "crates/arcadia-tio-ocb-core",
    "crates/arcadia-tio-sys",
    "crates/arcadia-tio-rs",
]
resolver = "3"

[workspace.package]
version = "0.3.3"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
homepage = "https://github.com/Jacobbishopxy/arcadia-tio-rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zstd = "0.13"
