[package]
name = "arcadia-tio-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
homepage = "https://github.com/Jacobbishopxy/arcadia-tio-rs"
description = "Safe Rust wrapper over the Arcadia TIO C ABI binary library."

[lib]
path = "src/lib.rs"

[features]
default = []
arrow = ["dep:arrow-array", "dep:arrow-ipc", "dep:arrow-schema"]
csv = ["dep:csv"]
ndarray = ["dep:ndarray"]
parquet = ["dep:bytes", "dep:parquet"]

[dependencies]
arcadia-tio-sys = { path = "../arcadia-tio-sys", version = "0.1.0" }
arrow-array = { version = "57.2.0", optional = true }
arrow-ipc = { version = "57.2.0", optional = true }
arrow-schema = { version = "57.2.0", optional = true }
bytes = { version = "1", optional = true }
csv = { version = "1.3", optional = true }
ndarray = { version = "0.17.2", optional = true }
parquet = { version = "57.2.0", optional = true, default-features = false }

[[example]]
name = "tutorial_01_quickstart_create_append_read"
path = "examples/tutorials/01_quickstart_create_append_read.rs"

[[example]]
name = "tutorial_02_layouts_reads_history"
path = "examples/tutorials/02_layouts_reads_history.rs"

[[example]]
name = "tutorial_03_coordinates_numeric"
path = "examples/tutorials/03_coordinates_numeric.rs"

[[example]]
name = "tutorial_04_coordinates_full_surface"
path = "examples/tutorials/04_coordinates_full_surface.rs"

[[example]]
name = "tutorial_05_sparse_append"
path = "examples/tutorials/05_sparse_append.rs"

[[example]]
name = "tutorial_06_mutation_history_universe"
path = "examples/tutorials/06_mutation_history_universe.rs"

[[example]]
name = "tutorial_07_reform_compaction_diagnostics"
path = "examples/tutorials/07_reform_compaction_diagnostics.rs"

[[example]]
name = "tutorial_08_compression_interop"
path = "examples/tutorials/08_compression_interop.rs"

[[example]]
name = "tutorial_09_tensor_ops_conversions"
path = "examples/tutorials/09_tensor_ops_conversions.rs"
required-features = ["arrow", "ndarray", "csv", "parquet"]

